--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -441,37 +441,19 @@ lesbian or bisexual.
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:corrtable}Correlations among study variables.}
-\begin{tabular}{llllllll}
+\caption{\label{tab:corrtable}Correlations and Descriptive Statistics among Study Variables}
+\begin{tabular}{llllllllll}
 \toprule
- & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{2} & \multicolumn{1}{c}{3} & \multicolumn{1}{c}{4} & \multicolumn{1}{c}{5}\\
+ & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{1.} & \multicolumn{1}{c}{2.} & \multicolumn{1}{c}{3.} & \multicolumn{1}{c}{4.} & \multicolumn{1}{c}{5.} & \multicolumn{1}{c}{6.} & \multicolumn{1}{c}{NA}\\
 \midrule
-Actor's trait self objectification (TSO) & -0.35 & 2.64 &  &  &  &  & \\
-Actor's authenticity of interaction & 5.23 & 1.02 & -.02 &  &  &  & \\
-Actor's objectification of partner & -1.58 & 1.21 & .20 & -.07 &  &  & \\
-Actor's state self-objectification & 1.92 & 1.13 & .13 & -.10 & -.09 &  & \\
-Actor's future relationship agency & 4.69 & 0.96 & .04 & .23+ & .09 & -.09 & \\
-Actor's cognitive performance & 5.03 & 2.29 & .08 & .11 & .11 & .02 & .07\\
-\bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:descriptives}Descriptive Statistics for Study Variables}
-\begin{tabular}{lll}
-\toprule
- & \multicolumn{1}{c}{M} & \multicolumn{1}{c}{SD}\\
-\midrule
-Actor's trait self objectification (TSO) & -0.35 & 2.64\\
-Actor's authenticity of interaction & 5.23 & 1.02\\
-Actor's objectification of partner & -1.58 & 1.21\\
-Actor's state self-objectification & 1.92 & 1.13\\
-Actor's future relationship agency & 4.69 & 0.96\\
-Actor's cognitive performance & 5.03 & 2.29\\
+1. Actor's trait self objectification (TSO) & -0.35 & 2.64 &  &  &  &  &  &  & \\
+2. Actor's objectification of partner & -1.58 & 1.21 & .20 &  &  &  &  &  & \\
+3. Partner's objectification of the actor & -1.58 & 1.21 & .09 & .14 &  &  &  &  & \\
+4. Actor's state self-objectification & 1.92 & 1.13 & .13 & -.09 & .30* &  &  &  & \\
+5. Actor's authenticity of interaction & 5.23 & 1.02 & -.02 & -.07 & .03 & -.10 &  &  & \\
+6. Actor's future relationship agency & 4.69 & 0.96 & .04 & .09 & -.10 & -.09 & .23+ &  & \\
+7. Actor's cognitive performance & 5.03 & 2.29 & .08 & .11 & .06 & .02 & .11 & .07 & \\
+8. Actor's career aspirations & 3.88 & 0.61 & .05 & -.14 & -.08 & .01 & .33** & .26* & -.07\\
 \bottomrule
 \end{tabular}
 \end{threeparttable}
@@ -479,9 +461,8 @@ Actor's cognitive performance & 5.03 & 2.29\\
 \end{table}
 
 The following measures were collected in the order they are presented
-following the interaction. Correlations appear in
-Table~\ref{tab:corrtable}, and descriptive statistics appear in
-Table~\ref{tab:descriptives}.
+following the interaction. Correlations and descriptive statistics
+appear in Table~\ref{tab:corrtable}.
 
 \subsubsection{Cognitive Performance}\label{cognitive-performance}
 
@@ -514,7 +495,7 @@ indicate that the participant thought about their partner's external
 traits more than the partner's internal traits, and a negative score
 would indicate the opposite.
 
-As can be seen in Table~\ref{tab:descriptives}, the mean
+As can be seen in Table~\ref{tab:corrtable}, the mean
 other-objectification of women by women was \emph{M =} -1.58 (\emph{SD
 =} 1.21). This corresponds to women objectifying other women to a
 \emph{greater} extent than women's objectification of men reported in
@@ -627,7 +608,7 @@ the R-packages \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018),
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=400px]{theor_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:theorfigure}
+\includegraphics[width=400px]{theor_figure} \caption{Theoretical Model from Garcia et al. (2016).}\label{fig:theorfigure}
 \end{figure}
 
 This study sought to detect whether partners' objectification of one
