--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -38,7 +38,7 @@ draft             : no
 
 documentclass     : "apa6"
 classoption       : "man"
-output            : papaja::apa6_pdf
+output            : papaja::apa6_word
 ---
 
 ```{r setup, analysis-preferences}
@@ -381,7 +381,7 @@ smith_physTSO_alpha <- psych::alpha(select(smith_final, tso_3, tso_5, tso_6, tso
 Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredrickson1998swimsuit; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus non-observable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
 
 # Results
-## Data analysis
+## Analysis Strategy
 ```{r create_r-references, warning=FALSE, message=FALSE}
 r_refs(file = "r-references.bib")
 
@@ -389,7 +389,6 @@ r_refs(file = "r-references.bib")
 ```
 We used R [Version 3.5.2; @R-base] and the R-packages *tidyverse* [Version 1.2.1; @R-tidyverse], *psych* [Version 1.8.4; @R-psych], *nlme* [Version 3.1.137; @R-nlme] for our analyses. Further, we used the R-packages *papaja* [Version 0.1.0.9842; @R-papaja], *apaTables* [Version 2.0.5; @R-apaTables], with *knitr* [Version 1.25; @R-knitr] to create a fully reproducible manuscript in *rmarkdown* [Version 1.15; @R-rmarkdown].
 
-## Analysis Strategy
 ```{r apim, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Basic actor-partner interdependence model (APIM) depiction."}
 include_graphics("APIM_figure.png")
 ```
@@ -410,7 +409,7 @@ Testing our hypotheses in the current, same-gender, sample, involves using the A
 
 <!-- In order to interpret model fit, which refers to the ability of a model to reproduce the data (i.e., usually the varience-covariance matrix) we utilized both the I-SAT (saturated) model, and the Null model to ensure that all possible corresponding covariences are fixed to be equal across partners. We obtained fit estimates by subtracting the chi-square estimate for the I-SAT model from the analysis model [@olsen2006structural, @peugh2013analyzing]. -->
 
-##Main Results
+## Main Results
 ```{r semfigure, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Path Analysis Model with Estimates"}
 include_graphics("SEMfigure.png")
 ```
@@ -614,28 +613,26 @@ summary(apim5.c)
 ```
 Lastly, although there was no evidence that SSO was related to interaction authenticity in the current sample, we tested if interaction authenticity (composite of nine items) had effects on cognitive performance, career aspirations, and relationship agency, as it did in @garcia2016objectification. We again used MLM and thus, these effects were tested in three separate models. There was no significant effect of interaction authenticity on cognitive performance, `r report_stats(apim3, 2)`, but authenticity was significantly positively related to both career aspirations, `r report_stats(apim5, 2)`, and relationship agency, `r report_stats(apim4, 2)`. There was no direct effect of SSO on cognitive performance, `r report_stats(apim3.b, 3)`, and no direct effect of partner's other objectification on cognitive performance, `r report_stats(apim3.c, 4)`. There was no direct effect of SSO on career aspirations, `r report_stats(apim5.b, 3)`, and no direct effect of partner's other objectification on career aspirations, `r report_stats(apim5.c, 4)`. There was no direct effect of SSO on relationship agency, `r report_stats(apim4.b, 3)`, and no direct effect of partner's other objectification on relationship agency, `r report_stats(apim4.c, 4)`. 
 
-#Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also result in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
+# Discussion
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman is also related to women's SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-MORE ABOUT THIS PARTNER EFFECT
+As is the case in all correlational studies, we cannot be sure about the causal direction. The model used by the current study asserts that being objectified by a woman causes women to self-objectify, but it could be that women's SSO causes them to be objectified by their interaction partner. This latter interpretation is theoretically interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* state self-objectification that relates to being objectified by one's partner. Objectification Theory [@robertsfredrickson], as well as some past experimental studies [@saguyetal2010] suggest that at least one direction of the causal flow is from other-objectification to SSO. Other studies, especailly those investigating explicitly women objectifying other women [@puvia2013being], have relately found evidence that women's *trait* self-objectification causes women to objectify (dehumanize) other women and this link is mediated by *state* self-objectification. It could follow that we tend to objectify other women who objectify us and through a process of TSO causes SSO which in turn causes objectifation of one's partner, which in turn causes one's partner to objectify us. The current study does not provide any evidence of this alternative model, however---TSO was not significantly correlated with SSO and actor's objectification was not correlated with partner's objectification.    
 
-As is the case in all correlational studies, we cannot be sure about the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation is theoretically interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* state self-objectification that relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010], suggest that the causal flow is from other-objectification to SSO. 
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification; @gervais2011you]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is qualtatively different, and perhaps not as harmful, as the self-objectification experienced within an interaction with a man. However, as a strong note of caution, it is best not to interpret a null result as evidence of no relationship and more research on interpersonal objectification among women is needed. 
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification; @gervais2011you]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as harmful as the self-objectification experienced within an interaction with a man. However, as a strong note of caution, it is best not to interpret a null result as evidence of no relationship. 
+The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no relationship. It should be noted that the estimate of this relationship was small (close to zero), but in the negative direction. If it is the case that there is a smaller (i.e., weaker) connection between women's feelings of SSO and inauthenticity in interactions with other women than in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including inauthenticity as a potential mediating factor. Further, gender of the objectifyer/interaction partner could be added as a moderator of the self-objectificaiton to authenticity process to help understand the circumstances that require other-objectification and SSO to have negative consequences for women.  
 
-The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no relationship. It should be noted that the estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller (i.e., weaker) connection between women's feelings of SSO and inauthenticity in interactions with other women than in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including inauthenticity as a potential mediating factor. Further, gender of the objectifyer/interaction partner could also be added to the SIMO model to help understand the circumstances that require other-objectification and SSO to have negative consequences for women.  
-
-Although the urrent study did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but was not statistically signficant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification; @tolman2006looking], we again find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
+Although the current study did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but was not statistically signficant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification; @tolman2006looking], we again find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
 
 ##Limitations and Future Directions
 
 ###Sample Characteristics
-In addition to being small and combined across two institutions, the sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008], although more current work examines objectification from a cross-cultural framework [@loughnan2015, @wollast2020cultural]. Since “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content. [Kat: Or a longitudinal study is needed.]
+In addition to being relatively small and combined across two institutions, another limitation of the current study is that the sample was comprised of Western women only. Being that self-objectification is most prevalent in Western culture [@loughnan2015] research on objectification conducted outside of Western or Westernized countries has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015, @wollast2020cultural]. Since “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015].
 
-Men-men 
+Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content. Further, more longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectificaion are needed [see CITE and CITE for exmaples]. 
 
 ###Sexual Objectification and the Objectifyer's Gender
-The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that hetereosexual women are able to do this with other women as their target---and there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). This differential psychological process between women with differing sexualities might have served to dampen our ability to detect relationships, adding variability. [Kat: The only other thing I would add re: sexuality limitations are that we didn’t collect/use sexual orientation, so we couldn’t analyze results by that at all/our samples might have differed there.]
+The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that hetereosexual women are able to do this with other women as their target---and there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). This differential psychological process between women with differing sexualities might have served to dampen our ability to detect relationships, adding variability. 
 
 Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [@siever1994sexual; @strong2000eating], and less self-objectification [@brownlow1998relationship; @noffsinger2004objectification]. However none of these studies examined the relationship between self-objectification and experiences of sexual objectification. Thus, it is unclear whether lesbians indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Consistent with previous research, @hill2008examining determined that lesbians existed less physical appearance concerns compared to heterosexual women, however there was no evidence found that lesbian women self-objectify less than heterosexual women and they did not find that sexual orientation moderates the relationship between sexual objectification and self-objectification. This contradicts older theoretical literature that suggests that lesbians internalize cultural sexual objectification less than do heterosexual women [@brown1987lesbians; @pitman1999body; @lum1994lesbians; @siever1994sexual]. 
 
@@ -646,16 +643,10 @@ Objectification among platonic friends: Perhaps women could be amplifying each o
 ###Sexism and Sexual Discrimination
 Sexism has recently been found to be related to the objectification of women, but not men, for both men and women [@harsey2020men].[Kat: Is the relationship between sexism and objectification really this recent of a finding? Or was it just replicated recently?] Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
 
-###Measurement
-Future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operationalization of self-objectification may be improved. 
-
-###Alternative Model
-@puvia2013being alternative model. TSO -> SOO, mediated by SSO. “Found that women’s motivation to look attractive (for men) and internalize sociocultural beauty standards were positively linked with the dehumanization of sexually objectified female targets.” Tis relationship was mediated by their own level of self-objectification.” 
-
-##Clinical Implications
-The results from the current analysis highlight how subtle forms of sexist discrimination operate, and provide valuable insight into prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health, the creation and maintence of early action programs for girls and young women, and for scholars and practitioners to work intentially to provide the tools necessary to circumvent or mitigate negative effects on self-objectification to combat such experiences.
 
 #Conclusion
+The results from the current analysis highlight how subtle forms of sexist discrimination operate, and provide valuable insight into prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health, the creation and maintence of early action programs for girls and young women, and for scholars and practitioners to work intentially to provide the tools necessary to circumvent or mitigate negative effects on self-objectification to combat such experiences.
+
 The results of this study demonstrate the complex and ambivalent nature of sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. We did not find a significant effect between actor SSO and felt authenticity in the interaction, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to interaction inauthenticity.
 
 
