--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -142,31 +142,30 @@ the ways that women interact in both sexual and non-sexual settings.
 Roberts and Fredrickson (1997) Objectification Theory, suggests that, in
 addition to being steeped in a culture that objectifies women, women are
 objectified in actual interpersonal encounters. The negative effects of
-this interpersonal objectification are theorized be the strongest when
-it is a man doing the objectifying (Gervais, Vescio, \& Allen, 2011),
-but what are the consequences when a woman objectifies another woman in
-an interaction? Psychological researchers studying the sexual
-objectification of women, have in recent years explored the
-interpersonal process of the objectification, finding evidence for
-self-objectification in the target as a proximal consequence (Garcia,
-Earnshaw, \& Quinn, 2016, Strelan and Pagoudis (2018), Riemer, Sáez,
-Brock, and Gervais (2020)). For example, in a face-to-face mixed-gender
-dyadic study, Garcia et al. (2016) found that men's reported
-objectification of their female interaction partner was associated with
-increased self-objectification reported by their partner. They did not
-include same-gender, woman-woman interacting pairs. Gervais, Sáez,
-Riemer, and Klein (2020) have reviewed the literature on interpersonal
-self-objectification and has organized the process in a theoretical
-model called the Social Interaction Model of Objectification (SIMO), but
-this model is currently only relevant for mixed-gender encounters.
-Although there is ample evidence that women objectify other women
-(Loughnan et al., 2015a; Puvia \& Vaes, 2013), there are currently no
-studies investigating the process of interpersonal objectification in
-same-gender interactions. Does objectification by a female interaction
-partner have the same downstream negative consequences as being
-objectified by a male interaction partner? The current dyadic study
-addresses this omission using interacting pairs where both members
-identify as women.
+this interpersonal objectification for women are theorized be the
+strongest when it is a man doing the objectifying (Calogero, 2004; Gay
+\& Castano, 2010; Gervais, Vescio, \& Allen, 2011), but what are the
+consequences when a woman objectifies another woman in an interaction?
+Psychological researchers studying the sexual objectification of women,
+have in recent years explored the interpersonal process of the
+objectification, finding evidence for self-objectification in the target
+as a proximal consequence of being objectified (Garcia, Earnshaw, \&
+Quinn, 2016, Strelan and Pagoudis (2018), Riemer, Sáez, Brock, and
+Gervais (2020)). In a recent review, Gervais, Sáez, Riemer, and Klein
+(2020) organized the extant literature on interpersonal
+self-objectification and proposed a theoretical model called the Social
+Interaction Model of Objectification (SIMO), however this model focuses
+on mixed-gender encounters. Although there is evidence that women
+objectify other women (Loughnan et al., 2015a; Puvia \& Vaes, 2013),
+there are currently no studies investigating the process of
+interpersonal objectification in interactions between women. Is
+objectification by a female interaction partner related to an increase
+in self-objectification for the woman being objectified? Further, does
+objectification by a woman have the same downstream negative
+consequences for women as being objectified by a male interaction
+partner? The current study begins to address these questions by
+investigating interpersonal objectification among interacting pairs
+where both partners identify as women.
 
 \subsection{Self-Objectification}\label{self-objectification}
 
@@ -177,45 +176,27 @@ outcomes (e.g., anxiety, self-esteem, and cognitive performance)
 (Calogero, Tantleff-Dunn, \& Thompson, 2011; Moradi \& Huang, 2008).
 Calogero et al. (2011) proposes that self-objectification can be
 conceptualized as a learned trait, or \emph{trait} self-objectification
-(TSO). Furthermore, it can also be elicited momentarily, through the
-media, for example, with sexualized images in movies and magazines
-(Morry \& Staska, 2001), or when wearing sexualizing clothing (B. L.
-Fredrickson, Roberts, Noll, Quinn, \& Twenge, 1998). This momentary
-self-objectification is referred to as \emph{state} self-objectification
-(Bernard, Legrand, \& Klein, 2018; Calogero et al., 2011; Moradi \&
-Huang, 2008). Being objectified by another person may interact TSO to
-effect experiences of feeling like a body, or state self-objectification
-(SSO; Garcia et al., 2016).
+(TSO). Furthermore, self-objectification can also be elicited
+momentarily, for example, when viewing sexualized images in movies and
+magazines (Morry \& Staska, 2001), when trying on sexualizing clothing
+(B. L. Fredrickson, Roberts, Noll, Quinn, \& Twenge, 1998), or during
+video chat when you believe your interaction partner can only see your
+body (not face; Saguy, Quinn, F Dovidio, \& Pratto, 2010). This
+momentary self-objectification is referred to as \emph{state}
+self-objectification (SSO; Bernard, Legrand, \& Klein, 2018; Calogero et
+al., 2011; Moradi \& Huang, 2008) and is characterized by feeling like a
+body rather than a full self within a particular moment, instance, or
+context (Roberts \& Fredrickson, 1997).
 
-\subsection{Women Objectifying Women}\label{women-objectifying-women}
-
-Harsey and Zurbriggen (2020) found that self-objectification was related
-to the objectification of women to a similar degree for men and women.
-Additionally, Strelan and Hargreaves (2005) found that the more women
-self-objectify, the more they objectify other women. Could the process
-work in the other direction as well, that is, could objectification by a
-woman produce self-objectification, in a similar manner to mixed-gender
-interactions?
-
-Past research has focused on men's objectifying behaviors, with little
-attention paid to the role that women may also play in objectifying
-other women. Hill and Fischer (2008) assessed women's experiences of
-objectification from men independently from women's experiences of
-objectification from other women. They found that women may be
-socialized not only to see themselves as objects, but perhaps to see
-other women as objects as well. This process, however, was not comfirmed
-to occur during an actual interpersonal interaction. Loughnan et al.
-(2015a) found that women objectify other women to a greater extent than
-they objectify men. Women have also been found to objectify
-(dehumanized) sexualized targets presented as images (Puvia \& Vaes,
-2013), but very little is known about interpersonal sexual
-objectification among women and what the proximal effects of this
-objectification might be. We do know that objectification has more
-adverse consequences for women than men (Gervais et al., 2011; Moradi \&
-Huang, 2008; Saguy, Quinn, F Dovidio, \& Pratto, 2010), however, if
-women objectify other women, perhaps even to a stronger degree than they
-objectify men, this woman to woman objectification might have
-detrimental outcomes.
+There is evidence that being objectified by another person during an
+interaction elicits SSO. For example, in a face-to-face mixed-gender
+dyadic study, Garcia et al. (2016) found that men's reported
+objectification of their female interaction partner was associated with
+increased self-objectification as reported by their female partner.
+Further, this negative effect of the men's objectification on women's
+SSO was strongest for women higher in TSO. The current study uses this
+same dyadic paradigm to study same-gender, woman-woman interacting
+pairs.
 
 \subsection{Interpersonal
 Objectification}\label{interpersonal-objectification}
@@ -225,16 +206,21 @@ than men (Briton \& Hall, 1995), often times feel \enquote{looked at}
 within interpersonal interactions (Argyle \& Williams, 1969;
 Miles-McLean et al., 2015), and are likely to internalize the
 objectifying gaze on their physical self (Puvia \& Vaes, 2013; Young,
-1979). Moreover, perhaps the most adverse effect is that being
-objectified socializes girls and women to treat themselves as objects to
-be looked at and evaluated (Bartky, 1990; Berger, Cohen, \& Zelditch Jr,
-1972; B. L. Fredrickson et al., 1998). Gervais et al. (2020) recently
-reviewed the research on interpersonal objectification and organized our
-current theoretical understanding of this process in the Social
-Interaction Model of Objectification (SIMO). What is clear from Gervais
-et al. (2020)'s review is that we know little about women-on-women
-interpersonal objectification. Could there also be negative consequences
-of this type of interpersonal objectification?
+1979). Interpersonal objectification has been found to have negative
+consequences for women. Gervais et al. (2011) found that an objectifying
+gaze by a male interaction partner (confederate) was associated with
+lower math performance for women, than being objectified by a female
+interaction partner. Moreover, perhaps the most adverse effect of
+interpersonal objectificaiton is that being objectified socializes girls
+and women to treat themselves as objects to be looked at and evaluated
+(Bartky, 1990; Berger, Cohen, \& Zelditch Jr, 1972; B. L. Fredrickson et
+al., 1998). Gervais et al. (2020) recently reviewed the research on
+interpersonal objectification and organized our current theoretical
+understanding of this process in the Social Interaction Model of
+Objectification (SIMO). What is clear from Gervais et al. (2020)'s
+review is that we know little about women-on-women interpersonal
+objectification. Could there also be negative consequences of this type
+of interpersonal objectification?
 
 Interpersonal objectification can also occur within the context of
 romantic relationships, in addition to interactions with strangers.
@@ -261,19 +247,18 @@ mixed-gender contexts (stranger and romantic) has negative consequences
 for women, but what about in the context of interactions with other
 women? Is the self-objectification experienced in mixed-gender
 interactions associated with the same negative process as that
-experienced in same-gender interactions? On the one hand, the ample
-research demonstrating that the male gaze has a particularly detrimental
-effect would suggest no (Gay \& Castano, 2010; Gervais et al., 2011;
-Saguy et al., 2010, Calogero (2004); Yilmaz \& Bozo, 2019), but on the
-other hand, women do objectify other women (Harsey \& Zurbriggen, 2020;
-Loughnan et al., 2015a; Puvia \& Vaes, 2013). When they do it, does it
-lead to self-objectification in the same way men's objectification of
-women does (Garcia et al., 2016)? If so, does the self-objectification
-experienced in these same-gender interactions have the same negative
-consequences for authenticity in that interaction?
-
-\subsection{Interpersonal Objectification and
-Authenticity}\label{interpersonal-objectification-and-authenticity}
+experienced in same-gender interactions? The ample research
+demonstrating that the male gaze has a particularly detrimental effect
+for women would suggest no (Gay \& Castano, 2010; Gervais et al., 2011;
+Saguy et al., 2010, Calogero (2004); Yilmaz \& Bozo, 2019), but, there
+is evidence that women do objectify other women (Harsey \& Zurbriggen,
+2020; Loughnan et al., 2015a; Puvia \& Vaes, 2013) and to would be
+helpful to understand the consequencs of this intragroup objectification
+for women. When women objectify other women, does it lead to
+self-objectification in the same way men's objectification of women does
+(Garcia et al., 2016)? If so, does the self-objectification experienced
+in these same-gender interactions have the same negative consequences
+for authenticity in that interaction?
 
 There is some evidence that reduced authenticity is a consequence of
 self-objectification (Garcia et al., 2016; Terán et al., 2020). This
@@ -302,6 +287,33 @@ rather than a full human, in any interaction (intergroup or ingroup) may
 be enough to reduce women's feelings of authenticity and social
 competence, regardless of the gender of the objectifyer (Terán et al.,
 2020; Tolman, Impett, Tracy, \& Michael, 2006).
+
+\subsection{Women Objectifying Women}\label{women-objectifying-women}
+
+Past research investigating women objectifying other women has focused
+on the psychological conditions that led women to objectify women.
+Harsey and Zurbriggen (2020) found that self-objectification was related
+to the objectification of women to a similar degree for male and female
+participants. Along the same lines, Strelan and Hargreaves (2005) found
+that the more women self-objectify, the more they objectify other women.
+Could the process work in the other direction as well, that is, could
+objectification by a woman produce self-objectification, in a similar
+manner to objectification by a man? Hill and Fischer (2008) assessed
+women's experiences of objectification from men independently from
+women's experiences of objectification from other women. They found that
+women may be socialized not only to see themselves as objects, but
+perhaps to see other women as objects as well. This process, however,
+was not comfirmed to occur during an actual interpersonal interaction.
+Loughnan et al. (2015a) found that women objectify other women to a
+greater extent than they objectify men. Women have also been found to
+objectify (dehumanized) sexualized targets presented as images (Puvia \&
+Vaes, 2013), but very little is known about interpersonal sexual
+objectification among women and what the proximal effects of this
+objectification might be. We do know that objectification has more
+adverse consequences for women than men (Gervais et al., 2011; Moradi \&
+Huang, 2008; Saguy et al., 2010), however, if women objectify other
+women, perhaps even to a stronger degree than they objectify men, this
+woman to woman objectification might have detrimental outcomes.
 
 \subsection{The Current Study}\label{the-current-study}
 
@@ -406,25 +418,25 @@ be found in Garcia et al. (2016).
 
 \subsection{Participants}\label{participants}
 
-Data from two demographically equivalent higher education institutions
-in the Northeast United States were combined to create the final
-analysis sample (\emph{N =} 64) used in this study. In the measures
-section that follows we refer to them as Sample 1 and Sample 2.
-Thirty-two previously unacquainted self-identifying female dyads (64
-total participants) from institutions in the Northeast of the United
-States participated in this study. Sample 1 (\emph{N =} 24) is from a
-co-ed liberal arts college and Sample 2 (\emph{N =} 40) is from a
-women's liberal arts college. More specifically, twelve of the pairs
-were students at a co-ed liberal arts college, while the remaining
-twenty pairs attended a women's liberal arts college. {[}Footnote:
-Initially, data was collected from same-sex and mixed-sex dyads that
-comprised of male and female gendered individuals. Sample 1 originally
-consisted of twenty-two pairs, twelve men and thirty-two women.
-Twenty-three pairs made up of forty-three women and one man, as well as
-two participants who did not identify with either gender category,
-formed Sample 2. For consistency, we limited participant data to same
-sex female pairs at the two colleges.{]} All results presented below are
-from models including sample as a control variable.
+Data from two demographically similar higher education institutions in
+the Northeast United States were combined to create the final analysis
+sample (\emph{N =} 64) used in this study. In the measures section that
+follows we refer to them as Sample 1 and Sample 2. Thirty-two previously
+unacquainted self-identifying female dyads (64 total participants) from
+institutions in the Northeast of the United States participated in this
+study. Sample 1 (\emph{N =} 24) is from a co-ed liberal arts college and
+Sample 2 (\emph{N =} 40) is from a women's liberal arts college. More
+specifically, twelve of the pairs were students at a co-ed liberal arts
+college, while the remaining twenty pairs attended a women's liberal
+arts college. {[}Footnote: Initially, data was collected from same-sex
+and mixed-sex dyads that comprised of male and female gendered
+individuals. Sample 1 originally consisted of twenty-two pairs, twelve
+men and thirty-two women. Twenty-three pairs made up of forty-three
+women and one man, as well as two participants who did not identify with
+either gender category, formed Sample 2. For consistency, we limited
+participant data to same sex female pairs at the two colleges.{]} All
+results presented below are from models including sample as a control
+variable.
 
 The participants were mostly first-year college students, with an
 average age of 18.85 (SD = 1.04). The sample was 48.44\% White/European
@@ -590,7 +602,7 @@ TSO.
 
 \section{Results}\label{results}
 
-\subsection{Data analysis}\label{data-analysis}
+\subsection{Analysis Strategy}\label{analysis-strategy}
 
 We used R (Version 3.5.2; R Core Team, 2017) and the R-packages
 \emph{tidyverse} (Version 1.2.1; Wickham, 2017), \emph{psych} (Version
@@ -600,8 +612,6 @@ the R-packages \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018),
 \emph{apaTables} (Version 2.0.5; Stanley, 2018), with \emph{knitr}
 (Version 1.25; Xie, 2015) to create a fully reproducible manuscript in
 \emph{rmarkdown} (Version 1.15; Xie, Allaire, \& Grolemund, 2018).
-
-\subsection{Analysis Strategy}\label{analysis-strategy}
 
 \begin{figure}
 \includegraphics[width=400px]{APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
@@ -722,39 +732,46 @@ relationship agency, \emph{b} = -0.1, \emph{SE} = 0.11, \emph{p} = .365.
 
 The current study tested whether the model of interpersonal
 objectification and state self-objectification (SSO) used in Garcia et
-al. (2016) replicates in a same-gender dyadic sample of women only.
-Although past research has found that women do objectify other women
-(Harsey \& Zurbriggen, 2020; Loughnan et al., 2015a; Puvia \& Vaes,
-2013), this is the first study to test if \emph{interpersonal}
-other-objectification by women is related to state self-objectification
-in their woman-identified interaction partners. As hypothesized, the
-current study did find a significant relationship between a woman's
-interaction partner's report of having objectified her and her own
-post-interaction feelings of self-objectification. That is, there was a
-significant partner effect of other-objectification on SSO. This effect
-extends the equivalent relationship found in mixed-gender interactions
-to the context of same-gender interactions between women. Thus, evidence
-suggests that it is not only the male gaze, and male
-other-objectification that is related to women's state
-self-objectification, but being objectified by another woman can also
-result in SSO, at least in the context of a scenario where they know
-they are being evaluated as a potential dating partner. {[}Asha:Or
-\ldots{} thus evidence provides support for the claim that women being
-objectified by another woman result in sso in ways that are not uniquely
-dissimilar from that of xyz{]}
+al. (2016) replicates in a same-gender dyadic sample of women. Although
+past research has found that women do objectify other women (Harsey \&
+Zurbriggen, 2020; Loughnan et al., 2015a; Puvia \& Vaes, 2013), this is
+the first study to test if \emph{interpersonal} other-objectification by
+women is related to state self-objectification in their woman-identified
+interaction partners. As hypothesized, the current study did find a
+significant relationship between a woman's interaction partner's report
+of having objectified her and her own post-interaction feelings of
+self-objectification. That is, there was a significant partner effect of
+other-objectification on SSO. This effect extends the equivalent
+relationship found in mixed-gender interactions to the context of
+same-gender interactions between women. Thus, evidence suggests that it
+is not only the male gaze, and male other-objectification that is
+related to women's state self-objectification, but being objectified by
+another woman is also related to women's SSO, at least in the context of
+a scenario where they know they are being evaluated as a potential
+dating partner.
 
 As is the case in all correlational studies, we cannot be sure about the
-causal direction. It could be that women's SSO causes them to be
-objectified by their interaction partner. This interpretation is
-theoretically interesting given that, in both the Garcia et al. (2016)
-study and in the current study, it is \emph{women's} SSO that relates to
-being objectified by one's partner. However, Objectification Theory
-(Roberts \& Fredrickson, 1997), as well as past experimental studies
-{[}Saguy et al. (2010); CITE{]}, suggest that the causal flow is from
-other-objectification to SSO. Although, the current study found evidence
-for the partner effect of other-objectification on SSO, there was a lack
-of evidence for the connections between SSO and downstream negative
-consequences.
+causal direction. The model used by the current study asserts that being
+objectified by a woman causes women to self-objectify, but it could be
+that women's SSO causes them to be objectified by their interaction
+partner. This latter interpretation is theoretically interesting given
+that, in both the Garcia et al. (2016) study and in the current study,
+it is \emph{women's} state self-objectification that relates to being
+objectified by one's partner. Objectification Theory (Roberts \&
+Fredrickson, 1997), as well as some past experimental studies (Saguy et
+al., 2010) suggest that at least one direction of the causal flow is
+from other-objectification to SSO. Other studies, especailly those
+investigating explicitly women objectifying other women (Puvia \& Vaes,
+2013), have relately found evidence that women's \emph{trait}
+self-objectification causes women to objectify (dehumanize) other women
+and this link is mediated by \emph{state} self-objectification. It could
+follow that we tend to objectify other women who objectify us and
+through a process of TSO causes SSO which in turn causes objectifation
+of one's partner, which in turn causes one's partner to objectify us.
+The current study does not provide any evidence of this alternative
+model, however---TSO was not significantly correlated with SSO and
+actor's objectification was not correlated with partner's
+objectification.
 
 Where the results of the current study diverge most notably from the
 results of studies testing interpersonal objectification among
@@ -766,85 +783,91 @@ evidence of \emph{direct} or \emph{indirect} relationships between
 other-objectification and any of these outcomes. This is somewhat
 suprising given the extant evidence linking SSO and cognitive
 functioning (B. L. Fredrickson et al., 1998; and see Moradi \& Huang,
-2008 for a review; Quinn, Chaudoir, \& Kallen, 2011) and the small, but
-extant research on interpersonal other-ojectification and cognitive
-functioning (Garcia et al., 2016; Logel et al., 2009). This lack of
+2008 for a review; Quinn, Chaudoir, \& Kallen, 2011) and the research on
+interpersonal other-ojectification and cognitive functioning (Garcia et
+al., 2016; Gervais et al., 2011; Logel et al., 2009). This lack of
 evidence could potentially signal diverging processes between women's
 experiences with interpersonal objectification from men and
 interpersonal objectification from women. There is quite a bit of
 evidence suggesting that the male gaze is particularly detrimental
 (Calogero, 2004; Gervais, Holland, \& Dodd, 2013; Gervais et al., 2011;
 Roberts \& Fredrickson, 1997), and perhaps the self-objectification
-experienced within an interaction with a women is not as harmful as the
-self-objectification experienced within an interaction with a man. As a
-strong note of caution, it is best not to interpret a null result as
-evidence of no relationship.
+experienced within an interaction with a women is qualtatively
+different, and perhaps not as harmful, as the self-objectification
+experienced within an interaction with a man. However, as a strong note
+of caution, it is best not to interpret a null result as evidence of no
+relationship and more research on interpersonal objectification among
+women is needed.
 
 The lack of evidence for a relationship between SSO and interaction
 authenticity is surprising and again, should not be interpreted as
 evidence of no relationship. It should be noted that the estimate of
-this relationship was very small, but in the negative direction, as
-anticipated. If it is the case that there is a smaller (i.e., weaker)
+this relationship was small (close to zero), but in the negative
+direction. If it is the case that there is a smaller (i.e., weaker)
 connection between women's feelings of SSO and inauthenticity in
 interactions with other women than in interactions with men, models of
 interpersonal objectification, like the SIMO (Gervais et al., 2020),
 could be extended by including inauthenticity as a potential mediating
-factor. Further, gender of the objectifyer/interaction partner could
-also be added to the SIMO model to help understand the circumstances
-that require other-objectification and SSO to have negative consequences
-for women.
+factor. Further, gender of the objectifyer/interaction partner could be
+added as a moderator of the self-objectificaiton to authenticity process
+to help understand the circumstances that require other-objectification
+and SSO to have negative consequences for women.
 
-Although we did not find a connection between SSO and authenticity, we
-did find significant positive relationships between authenticity and
-relationship agency, and authenticity and career aspirations. The
-relationship between authenticity and cognitive functioning was also
-estimated as positive, but was not statistically signficant. Again, due
-to the lack of connection between SSO and authenticity, we found no
-evidence of \emph{indirect} relationships between SSO and these outcome
-variables. This evidence of a relationship between authenticity and the
-relational outcome variables (i.e., relationship agency and career
-aspirations) provides evidence that corroborates past findings that felt
-authenticity in interactions is important for healthy relationship
-functioning (Garcia et al., 2016; Terán et al., 2020). Just as
-authenticity has been found to be important in intergroup interactions
-(Brunell et al., 2010; Garcia et al., 2016; Tolman et al., 2006), we
-again find more evidence here that disruptions in feelings of
-authenticity can negatively impact relationships beyond the current
-partner. Although the current study did not find a connection between
-authenticity and SSO, this seems theoretically to be a natural
-connection, and future work must explore when and how SSO leads to
-inauthenticity in interpersonal objectification situations.
+Although the current study did not find a connection between SSO and
+authenticity, we did find significant positive relationships between
+authenticity and relationship agency, and authenticity and career
+aspirations. The relationship between authenticity and cognitive
+functioning was also estimated as positive, but was not statistically
+signficant. Again, due to the lack of connection between SSO and
+authenticity, we found no evidence of \emph{indirect} relationships
+between SSO and these outcome variables. This evidence of a relationship
+between authenticity and the relational outcome variables (i.e.,
+relationship agency and career aspirations) provides evidence that
+corroborates past findings that felt authenticity in interactions is
+important for healthy relationship functioning (Garcia et al., 2016;
+Terán et al., 2020). Just as authenticity has been found to be important
+in intergroup interactions (Brunell et al., 2010; Garcia et al., 2016;
+Tolman et al., 2006), we again find more evidence here that disruptions
+in feelings of authenticity can negatively impact relationships beyond
+the current partner. Although the current study did not find a
+connection between authenticity and SSO, this seems theoretically to be
+a natural connection, and future work must explore when and how SSO
+leads to inauthenticity in interpersonal objectification situations.
 
 \subsection{Limitations and Future
 Directions}\label{limitations-and-future-directions}
 
 \subsubsection{Sample Characteristics}\label{sample-characteristics}
 
-In addition to being small and combined across two institutions, the
-sample of the current study was comprised of Western women, being that
-sexual objectification is most prevalent in this culture (Loughnan et
-al., 2015b), and research on objectification conducted outside of
-Western or Westernized countries is scarce (Moradi \& Huang, 2008),
-although more current work examines objectification from a
-cross-cultural framework (Loughnan et al., 2015b, Wollast et al.
-(2020)). Since \enquote{bodies exist within social and cultural
-contexts, and hence are also constructed through sociocultural practices
-and discourses} (Roberts \& Fredrickson, 1997, p. 174), it is important
-to consider how diverse social identities within unique cultural
-contexts may inform sexual objectification phenomenon to test the
-cross-cultural applicability of theoretical frameworks (Loughnan et al.,
-2015b). Further, sexualizing experiences and self-objectification are
-thought to begin a very young age, and thus, researchers have only
-recently begun to examine such experiences among children (Bury,
-Tiggemann, \& Slater, 2016; e.g., Holland \& Haslam, 2016; Jongenelis,
-Byrne, \& Pettigrew, 2014). Considering the fact that the average mean
-age of the investigated participants of this current study was 18.85
-years, research among younger and older individuals is needed,
-especially because self-objectification may change over time (Roberts \&
+In addition to being relatively small and combined across two
+institutions, another limitation of the current study is that the sample
+was comprised of Western women only. Being that self-objectification is
+most prevalent in Western culture (Loughnan et al., 2015b) research on
+objectification conducted outside of Western or Westernized countries
+has been scarce (Moradi \& Huang, 2008), although more recent work has
+examined objectification from a cross-cultural framework (Loughnan et
+al., 2015b, Wollast et al. (2020)). Since \enquote{bodies exist within
+social and cultural contexts, and hence are also constructed through
+sociocultural practices and discourses} (Roberts \& Fredrickson, 1997,
+p. 174), it is important to consider how diverse social identities
+within unique cultural contexts may inform sexual objectification
+phenomenon to test the cross-cultural applicability of theoretical
+frameworks (Loughnan et al., 2015b).
+
+Further, sexualizing experiences and self-objectification are thought to
+begin a very young age, and thus, researchers have only recently begun
+to examine such experiences among children (Bury, Tiggemann, \& Slater,
+2016; e.g., Holland \& Haslam, 2016; Jongenelis, Byrne, \& Pettigrew,
+2014). Considering the fact that the average mean age of the
+investigated participants of this current study was 18.85 years,
+research among younger and older individuals is needed, especially
+because self-objectification may change over time (Roberts \&
 Fredrickson, 1997). It may be valuable to question the extent to which
 children, adolescents, or emerging adults of different races or
 ethnicities are exposed to varied amounts of sexualizing content.
-{[}Kat: Or a longitudinal study is needed.{]}
+Further, more longitudinal studies investigating the developmental
+experience of interpersonal objectification and self-objectificaion are
+needed {[}see CITE and CITE for exmaples{]}.
 
 \subsubsection{Sexual Objectification and the Objectifyer's
 Gender}\label{sexual-objectification-and-the-objectifyers-gender}
@@ -859,10 +882,7 @@ more apt to activate social comparison processes (Festinger, 1954) than
 women who are sexually attracted to other women (non-heterosexual
 women). This differential psychological process between women with
 differing sexualities might have served to dampen our ability to detect
-relationships, adding variability. {[}Kat: The only other thing I would
-add re: sexuality limitations are that we didn't collect/use sexual
-orientation, so we couldn't analyze results by that at all/our samples
-might have differed there.{]}
+relationships, adding variability.
 
 Previous research has found that when compared to heterosexual women,
 lesbian women report less concern with physical appearance (Siever,
@@ -920,22 +940,7 @@ and Fredrickson (1997) is likely to create a shared vulnerability to
 sexual objectification and a variety of shared negative experiences as a
 result.
 
-\subsubsection{Measurement}\label{measurement}
-
-Future experiments or longitudinal studies should explore the external
-validity of the notions of self-objectification and how the
-operationalization of self-objectification may be improved.
-
-\subsubsection{Alternative Model}\label{alternative-model}
-
-Puvia and Vaes (2013) alternative model. TSO -\textgreater{} SOO,
-mediated by SSO. \enquote{Found that women's motivation to look
-attractive (for men) and internalize sociocultural beauty standards were
-positively linked with the dehumanization of sexually objectified female
-targets.} Tis relationship was mediated by their own level of
-self-objectification.''
-
-\subsection{Clinical Implications}\label{clinical-implications}
+\section{Conclusion}\label{conclusion}
 
 The results from the current analysis highlight how subtle forms of
 sexist discrimination operate, and provide valuable insight into
@@ -945,8 +950,6 @@ the creation and maintence of early action programs for girls and young
 women, and for scholars and practitioners to work intentially to provide
 the tools necessary to circumvent or mitigate negative effects on
 self-objectification to combat such experiences.
-
-\section{Conclusion}\label{conclusion}
 
 The results of this study demonstrate the complex and ambivalent nature
 of sexual objectification and additionally highlight the psychological
